# test_list_of_products

./: .env  .gitignore  docker-compose.yml  nginx.conf  pyproject.toml
backend/configs/: settings.py  urls.py
backend/core/: models.py
client/: asset-manifest.json  index.html
mysql/: binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  binlog.000008  binlog.000009  binlog.000012  binlog.000013  binlog.000014  binlog.000015  binlog.000016  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
mysql/#innodb_redo/: #ib_redo9
mysql/#innodb_temp/: temp_1.ibt  temp_10.ibt  temp_2.ibt  temp_3.ibt  temp_5.ibt  temp_6.ibt  temp_7.ibt  temp_8.ibt
mysql/list_of_products/: auth_group.ibd  auth_group_permissions.ibd  auth_permission.ibd  auth_user.ibd  auth_user_user_permissions.ibd  comments.ibd  django_migrations.ibd
mysql/mysql/: general_log_214.sdi  slow_log_215.sdi
mysql/performance_schema/: cond_instances_81.sdi  data_locks_161.sdi  error_log_82.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_hi_114.sdi  events_stages_su_115.sdi  events_stages_su_117.sdi  events_stages_su_118.sdi  events_stages_su_119.sdi  events_statement_120.sdi  events_statement_121.sdi  events_statement_122.sdi  events_statement_124.sdi  events_statement_125.sdi  events_statement_126.sdi  events_statement_127.sdi  events_statement_129.sdi  events_statement_131.sdi  events_transacti_133.sdi  (+60 more)
(+17 files in other folders)
